# nrf52-jailbreaker

./: .gitmodules  README.md
fw/: crossfile_bluepill.txt  flash.jlink  meson.build
fw/linker/: common.ld  stm32f103cb.ld
fw/src/: cdc.c  exceptions.c  flash.c  gpio.c  gpio.h  main.c  rcc.c  rcc.h  systick.c  systick.h  tusb_config.h  usb.c  usb.h  usb_descriptors.c
fw/src/util/: data.h  types.h
scripts/: jailbreak.py
